tests/ui/string_not_newtype.stderr
error: expected a newtype struct with exactly one unnamed field
 --> tests/ui/string_not_newtype.rs:4:1
  |
4 | struct BadId(String, String);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
