tests/ui/string_not_newtype.rs
use identifiers::StringIdentifier;

#[derive(StringIdentifier)]
struct BadId(String, String);

fn main() {}
